[package]
name = "rpi-temp-fan-pwm"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
clap-verbosity-flag = "3.0.2"
in-container = {version = "1.1.0", default-features = false }
log = "0.4.27"
log4rs = "1.3.0"
mockall = "0.13.1"
num-traits = "0.2.19"
os_info = "3.11.0"
rppal = "0.22.1"
simple-signal = "1.1.1"
# snafu = "0.8.5"
